[gd_scene load_steps=5 format=3 uid="uid://cng4m3os6smj8"]

[ext_resource type="Texture2D" uid="uid://c8ragmxitca47" path="res://Scenes/ContentManager/Mapeditor/Images/emptyTile.png" id="1_gm4uu"]
[ext_resource type="Script" path="res://Scenes/ContentManager/Custom_Editors/Scripts/FurnitureEditor.gd" id="1_wqqit"]
[ext_resource type="PackedScene" uid="uid://b8i6wfk3fngy4" path="res://Scenes/ContentManager/Custom_Widgets/Editable_Item_List.tscn" id="2_ekwf5"]
[ext_resource type="PackedScene" uid="uid://d1h1rpwt8f807" path="res://Scenes/ContentManager/Custom_Widgets/Sprite_Selector_Popup.tscn" id="3_o3k3a"]

[node name="FurnitureEditor" type="Control" node_paths=PackedStringArray("furnitureImageDisplay", "IDTextLabel", "NameTextEdit", "DescriptionTextEdit", "CategoriesList", "furnitureSelector", "imageNameStringLabel", "moveableCheckboxButton", "edgeSnappingOptionButton", "doorOptionButton")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wqqit")
furnitureImageDisplay = NodePath("VBoxContainer/FormGrid/FurnitureImageDisplay")
IDTextLabel = NodePath("VBoxContainer/FormGrid/IDTextLabel")
NameTextEdit = NodePath("VBoxContainer/FormGrid/NameTextEdit")
DescriptionTextEdit = NodePath("VBoxContainer/FormGrid/DescriptionTextEdit")
CategoriesList = NodePath("VBoxContainer/FormGrid/Editable_Item_List")
furnitureSelector = NodePath("Sprite_selector")
imageNameStringLabel = NodePath("VBoxContainer/FormGrid/ImageNameStringLabel")
moveableCheckboxButton = NodePath("VBoxContainer/FormGrid/UnmoveableCheckBox")
edgeSnappingOptionButton = NodePath("VBoxContainer/FormGrid/SnappingOptionButton")
doorOptionButton = NodePath("VBoxContainer/FormGrid/FunctionControlContainer/DoorOptionButton")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Close"

[node name="SaveButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="FormGrid" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="ImageLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "Sprite:"

[node name="FurnitureImageDisplay" type="TextureRect" parent="VBoxContainer/FormGrid"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 0
size_flags_stretch_ratio = 0.4
focus_next = NodePath("../NameTextEdit")
focus_previous = NodePath("../Editable_Item_List")
focus_mode = 2
texture = ExtResource("1_gm4uu")
expand_mode = 3

[node name="ImageNameLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "Sprite name:"

[node name="ImageNameStringLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2

[node name="IDLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "ID:"

[node name="IDTextLabel" type="Label" parent="VBoxContainer/FormGrid"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="NameLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "Name"

[node name="NameTextEdit" type="TextEdit" parent="VBoxContainer/FormGrid"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
focus_next = NodePath("../DescriptionTextEdit")
focus_previous = NodePath("../FurnitureImageDisplay")

[node name="DescriptionLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "Description"

[node name="DescriptionTextEdit" type="TextEdit" parent="VBoxContainer/FormGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.9
focus_next = NodePath("../Editable_Item_List")
focus_previous = NodePath("../NameTextEdit")
wrap_mode = 1

[node name="CategoriesLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "Categories:"

[node name="Editable_Item_List" parent="VBoxContainer/FormGrid" instance=ExtResource("2_ekwf5")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_next = NodePath("../FurnitureImageDisplay")
focus_previous = NodePath("../DescriptionTextEdit")
focus_mode = 2
header = "Categories"

[node name="MoveableLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "Can move"

[node name="UnmoveableCheckBox" type="CheckBox" parent="VBoxContainer/FormGrid"]
layout_mode = 2
tooltip_text = "Check this if the furniture should be moveable, like a chair. Leave this unchecked if the furniture should not move, like a fence"
text = "Moveable"

[node name="SnappingLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "Edge snapping"

[node name="SnappingOptionButton" type="OptionButton" parent="VBoxContainer/FormGrid"]
layout_mode = 2
tooltip_text = "Snapping direction for the furniture. This 
determines in what direction the furniture will 
snap to the edge of a block. The 'back' of the 
furniture determines the direction.
For example, if a fridge sprite has the back on the 
north side, select north and the furniture will 
snap to the north edge. Selecting none will center the sprite"
item_count = 5
selected = 0
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "North"
popup/item_1/id = 1
popup/item_2/text = "East"
popup/item_2/id = 2
popup/item_3/text = "South"
popup/item_3/id = 3
popup/item_4/text = "West"
popup/item_4/id = 4

[node name="FunctionLabel" type="Label" parent="VBoxContainer/FormGrid"]
layout_mode = 2
text = "Function"

[node name="FunctionControlContainer" type="HBoxContainer" parent="VBoxContainer/FormGrid"]
layout_mode = 2

[node name="DoorLabel" type="Label" parent="VBoxContainer/FormGrid/FunctionControlContainer"]
layout_mode = 2
text = "Door:"

[node name="DoorOptionButton" type="OptionButton" parent="VBoxContainer/FormGrid/FunctionControlContainer"]
layout_mode = 2
tooltip_text = "Lets this furniture function as a door. The player can interact with it and it will open and close. Selecting None prevents this furniture from working as a door. Selecting Open will spawn this furniture in an open state. Selecting Closed will spawn this furniture in a closed state"
item_count = 3
selected = 0
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Open"
popup/item_1/id = 1
popup/item_2/text = "Closed"
popup/item_2/id = 2

[node name="Sprite_selector" parent="." instance=ExtResource("3_o3k3a")]
visible = false

[connection signal="button_up" from="VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_button_up"]
[connection signal="gui_input" from="VBoxContainer/FormGrid/FurnitureImageDisplay" to="." method="_on_furniture_image_display_gui_input"]
[connection signal="sprite_selected_ok" from="Sprite_selector" to="." method="_on_sprite_selector_sprite_selected_ok"]
